# amphipathic

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  Dockerfile.poetry  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  requirements_development.txt  setup.py
.github/workflows/: pytest.yml
amphipathic/: Anfip07.bas  PRIFT.TAB  __init__.py  core.py  hydrophobic.py  secondary_structure.py
amphipathic/hydrophobic/: __init__.py  core.py  cornette.py
amphipathic/hydrophobic/data/: cornette.csv  cornette_normalized.csv
tests/: __main__.py  amphipathic_test.py  conftest.py  test_amphipathic.py  test_secondary_structure.py
tests/auxs/: APS_S.AI  APS_S.txt  ApsARE.txt  BG1_S.AI  BG1_S.txt  Bg1ARE.txt
tests/cornette/: test_hydrophobic.py
tests/fixtures/: base.py  sequences.py
